service.yml
apiVersion: v1
kind: Service
metadata:
  name: kvstore-service
spec:
  selector:
    app: kvstore
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
